fix spacing for mobile and desktop now that nav is fixed for #432 and #465

--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -85,11 +85,11 @@ body > * {
 #application {
   width: 100%;
   max-height: 100%;
-  margin-top: 170px;
+  margin-top: 140px;
   background: #fafafa;
 }
 #help-nav {
-  margin-top: 60px;
+  margin-top: 20px;
 }
 #call-to-action {
   background: url(../assets/stock-img/bg-img-large.jpg) no-repeat;
@@ -179,10 +179,10 @@ body > * {
   text-decoration: underline;
 }
 #loginwall {
-  padding: 240px 0 0 0;
+  padding: 200px 0 0 0;
 }
 #landing-page {
-  margin-top: 220px;
+  margin-top: 180px;
   background: white;
   height: 100%;
 }
@@ -320,37 +320,21 @@ img {
   margin: 0 auto;
 }
 #links {
-  text-align: text-center;
   width: 100%;
 }
 #links ul {
   list-style-type: none;
   padding: 0;
 }
-#links.text-links ul li {
-  display: block;
-  margin: 10px 0;
-}
-#links.text-links ul li:last-child {
-  margin-right: 0;
-}
-#links.icons {
-  display: inline-block;
-}
-#links.icons ul li {
+#links.text-links ul li, #links.icons ul li {
   display: block;
   margin: 2px 0;
 }
 #links.icons ul li i {
-  padding-right: 5px
-}
-#links ul li {
-  display: inline;
-  padding: 0 10px 0 0;
+  padding-right: 10px
 }
 #links ul li a {
   text-transform: uppercase;
-  text-decoration: none;
   letter-spacing: 1px;
   color: #8aaf3e;
 }
@@ -783,7 +767,7 @@ table td {
 *------------------------------------*/
 @media (min-width: 853px) {
   #application {
-    margin-top: 60px;
+    margin-top: 40px;
   }
   #help-nav {
     margin-top: 0px;
@@ -822,28 +806,21 @@ table td {
     width: 60%;
     float: right;
   }
-  #links button {
-    width: auto;
-  }
-  #links.icons {
-    padding-top: 17px;
-    text-align: right;
+  #links.text-links, #links.icons {
+    padding-top: 20px;
   }
   #links.icons ul li {
     display: inline-block;
   }
-  #links.text-links {
-    padding-top: 20px;
-  }
-  #links.text-links ul {
+  #links.text-links ul, #links.icons ul {
     text-align: right;
   }
-  #links.text-links ul li {
-    display: inline !important;
-    width: 100%;
+  #links.text-links ul li,  #links.icons ul li {
+    display: inline-block;
+    padding: 0 20px 0 0;
   }
-  #links.text-links ul li:last-child {
-    padding-right: 15px;
+  #links.text-links ul li:last-child, #links.icons ul li:last-child {
+    padding-right: 20px;
   }
   #links ul li a{
     font-size: 14px;
@@ -871,10 +848,7 @@ table td {
   }
 }
 @media (min-width: 999px) {
-  #links.text-links ul li {
-    padding: 0 40px 0 0;
-  }
-  #links.icons ul li {
+  #links.text-links ul li, #links.icons ul li {
     padding: 0 30px 0 0;
   }
   h1 {
